# Easy-Background

./: .gitignore  LICENSE  Makefile  README.md  install.bat  install.sh  main.py  pyproject.toml  requirements.txt
src/: __init__.py  background_remover.py  utils.py  white_bg_generator.py
